fix dropdown colours on mobile

--- a/style/styles.scss
+++ b/style/styles.scss
@@ -147,7 +147,7 @@ h1 {
     }
   }
   .dropdown-toggle{
-    background: none !important;
+    background: transparent !important;
   }
 }
 
